git config --global user.email "kotikovd.2006@gmail.com"  git config --global user.name "Котиков Денис"